# weather-recognition

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  dataset.dvc  main.py  pyproject.toml
.dvc/: config
conf/: config.yaml
conf/data/: datamodule.yaml
conf/logging/: tensorboard.yaml
conf/mlflow/: mlflow.yaml
conf/model/: resnet18.yaml  simplecnn.yaml
outputs/2025-12-14/17-10-15/.hydra/: hydra.yaml
outputs/2025-12-14/17-12-20/.hydra/: config.yaml  hydra.yaml
weather_recognition/: eval.py  infer.py  litmodule.py  model_baseline.py  model_resnet.py  train.py
weather_recognition/conf/: config.yaml  infer.yaml
weather_recognition/conf/data/: datamodule.yaml
weather_recognition/conf/mlflow/: mlflow.yaml
weather_recognition/conf/train/: trainer.yaml
weather_recognition/data/: datamodule.py  dataset.py  dvc_utils.py  transforms.py
weather_recognition/models/: model_baseline.py  model_resnet.py
